# google-data-binding

./: .gitignore  Android.bp  Android.mk  BUILD  BUILD.bazel  README.md  build.gradle  databinding.properties  init.sh  propLoader.gradle  run_compilation_tests.sh  settings.gradle  supportBundle.gradle  update_googe3.sh
annotationprocessor/: build.gradle
baseLibrary/: build.gradle
baseLibrarySupport/: build.gradle
bintrayPlugin/: build.gradle  settings.gradle
buildSrc/src/main/groovy/android.databinding/: LicenseCollector.groovy
compilationTests/: build.gradle
compilationTests/gradle/wrapper/: gradle-wrapper.properties
compilationTests/src/test/: compiler-test
compilationTests/src/test/resources/: AndroidManifest.xml  app_build.gradle  commonBuildScript.gradle  module_build.gradle  project_build.gradle
compilationTests/src/test/resources/layout/: layout_with_dependency.xml  layout_with_two_way_event_attribute.xml  safe_unbox_layout.xml
compiler/: build.gradle
compiler/src/main/resources/: NOTICE.txt
compilerCommon/: BindingExpression.g4  build.gradle
developmentPlugins/: build.gradle
developmentPlugins/bintrayPlugin/: build.gradle
developmentPlugins/gradle/wrapper/: gradle-wrapper.properties
developmentPlugins/localizeMavenPlugin/: build.gradle
exec/: build.gradle
exec/src/test-data/base/layout/: activity.xml
exec/src/test-data/dependant/layout/: dependant.xml
extensions/: build.gradle  gradle.properties  settings.gradle
extensions-support/: build.gradle  gradle.properties
extensions-support/baseAdapters/: build.gradle
extensions-support/gradle/wrapper/: gradle-wrapper.properties
extensions/baseAdapters/: build.gradle
extensions/baseAdapters/src/main/: AndroidManifest.xml
extensions/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
gradlePlugin/: build.gradle
gradlePlugin/src/main/kotlin/: DataBindingExportInfoTask.kt  DataBindingProcessLayoutsTask.kt  plugin.kt
gradlePlugin/src/main/resources/: NOTICE.txt
integration-tests/: PROFILING.md  ideCommonBuildScript.gradle
integration-tests-support/: ideCommonBuildScript.gradle
integration-tests-support/AppWithDataBindingInTests/: build.gradle
integration-tests-support/AppWithDataBindingInTests/app/: build.gradle
integration-tests-support/AppWithDataBindingInTests/app/src/main/: AndroidManifest.xml
integration-tests-support/IndependentLibrary/: build.gradle
integration-tests-support/IndependentLibrary/app/: build.gradle
integration-tests-support/InstantApp/: settings.gradle
integration-tests-support/InstantApp/base/src/main/: AndroidManifest.xml
integration-tests-support/InstantApp/featureB/: build.gradle
integration-tests-support/InstantApp/featureB/src/main/: AndroidManifest.xml
integration-tests-support/MultiModuleTestApp/: settings.gradle
integration-tests-support/MultiModuleTestApp/app/: build.gradle
integration-tests-support/MultiModuleTestApp/testlibrary1/: build.gradle
integration-tests-support/MultiModuleTestApp/testlibrary1/src/main/: AndroidManifest.xml
integration-tests-support/ProguardedAppWithTest/app/: build.gradle  proguard-rules.pro  proguard-test-rules.pro
integration-tests-support/TestApp/: build.gradle
integration-tests-support/TestApp/app/: build.gradle
integration-tests/App With Spaces/app/: build.gradle
integration-tests/App With Spaces/gradle/wrapper/: gradle-wrapper.properties
integration-tests/AppWithDataBindingInTests/: gradle.properties
integration-tests/AppWithDataBindingInTests/app/: build.gradle
integration-tests/IndependentLibrary/: build.gradle
integration-tests/IndependentLibrary/app/: build.gradle
integration-tests/IndependentLibrary/gradle/wrapper/: gradle-wrapper.properties
integration-tests/InstantApp/: build.gradle  gradle.properties
integration-tests/InstantApp/app/: build.gradle
integration-tests/InstantApp/base/: build.gradle
integration-tests/InstantApp/featureA/: build.gradle
integration-tests/InstantApp/featureB/: build.gradle
integration-tests/InstantApp/instantapp/: build.gradle
integration-tests/KotlinTestApp/: build.gradle  gradle.properties
integration-tests/KotlinTestApp/app/: build.gradle
integration-tests/LibCompileWith3.1/: README.md
integration-tests/LibCompileWithV1/: README.md  build.gradle  gradle.properties
integration-tests/MultiModuleTestApp/: build.gradle  settings.gradle
integration-tests/MultiModuleTestApp/app/: build.gradle
integration-tests/MultiModuleTestApp/app/libs/: README.md  lib_compiled_with_v1_agp_3_1_4.aar
integration-tests/MultiModuleTestApp/gradle/wrapper/: gradle-wrapper.properties
integration-tests/MultiModuleTestApp/inheritedmodule/: build.gradle
integration-tests/MultiModuleTestApp/testlibrary/: build.gradle
integration-tests/MultiModuleTestApp/testlibrary1/: build.gradle
integration-tests/MultiModuleTestApp/testlibrary1/libs/: lib_with_layout_v1.aar
integration-tests/MultiModuleTestApp/testlibrary2/: build.gradle
integration-tests/ProguardedAppWithTest/app/: build.gradle  proguard-rules.pro  proguard-test-rules.pro
integration-tests/TestApp/: build.gradle
integration-tests/TestApp/app/: build.gradle
integration-tests/TestApp/gradle/wrapper/: gradle-wrapper.properties
old-version-projects/: README.md
old-version-projects/TestAppWithOldDependency/app/: build.gradle
old-version-projects/TestAppWithOldDependency/gradle/wrapper/: gradle-wrapper.properties
old-version-projects/library-project/: build.gradle
old-version-projects/library-project/app/: build.gradle
old-version-projects/library-project/gradle/wrapper/: gradle-wrapper.properties
prebuilds/0.3/: databinding-adapters.aar  databinding-library.aar
prebuilds/0.9/: databinding-adapters.aar  databinding-library.aar
prebuilds/0.9.1/: databinding-adapters.aar  databinding-library.aar
prebuilds/1.0-rc0/: databinding-adapters.aar  databinding-library.aar
samples/BindingDemo/: build.gradle
samples/BindingDemo/app/: build.gradle
samples/BindingDemo/gradle/wrapper/: gradle-wrapper.properties
(+722 files in other folders)
