load("//tools/base/bazel:bazel.bzl", "iml_module")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library", "kotlin_test")
load("//tools/base/bazel:maven.bzl", "maven_java_library", "maven_pom")
load("//tools/base/bazel:utils.bzl", "merged_properties")
load("//tools/base/bazel:gradle.bzl", "gradle_build")
load("//tools/base/bazel:maven.bzl", "maven_repo")

exports_files(["databinding.properties"])

# TODO: move these to baseLibrary/, once we can use build.bazel
iml_module(
    name = "studio.baseLibrary",
    srcs = ["baseLibrary/src/main/java"],
    iml_files = ["baseLibrary/db-baseLibrary.iml"],
    tags = ["managed"],
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    deps = [
        "//prebuilts/tools/common/m2/repository/junit/junit/4.12:jar[test]",
        "//prebuilts/tools/common/m2/repository/org/hamcrest/hamcrest-core/1.3:jar[test]",
    ],
)

maven_java_library(
    name = "tools.baseLibrary",
    srcs = glob(["baseLibrary/src/main/java/**"]),
    javacopts = [
        "-source 6",
        "-target 6",
    ],
    pom = ":baseLibrary.pom",
    visibility = ["//visibility:public"],
)

maven_pom(
    name = "baseLibrary.pom",
    artifact = "baseLibrary",
    group = "com.android.databinding",
    source = "//tools/buildSrc/base:build_version",
)

iml_module(
    name = "studio.compilerCommon",
    # do not sort: must match IML order
    srcs = [
        "compilerCommon/src/main/java",
        "compilerCommon/src/main/kotlin",
        "compilerCommon/src/main/xml-gen",
        "compilerCommon/src/main/grammar-gen",
    ],
    iml_files = ["compilerCommon/db-compilerCommon.iml"],
    tags = ["managed"],
    test_srcs = ["compilerCommon/src/test/java"],
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    exports = ["//tools/data-binding:studio.baseLibrary"],
    # do not sort: must match IML order
    deps = [
        "//tools/data-binding:studio.baseLibrary[module]",
        "//tools/base/annotations:studio.android-annotations[module]",
        "//tools/idea/.idea/libraries:juniversalchardet-1.0.3",
        "//tools/idea/.idea/libraries:JUnit4[test]",
        "//tools/idea/.idea/libraries:antlr4-runtime-4.5.3",
        "//tools/idea/.idea/libraries:commons-io-2.4",
        "//tools/idea/.idea/libraries:Guava",
        "//tools/idea/.idea/libraries:KotlinJavaRuntime",
        "//tools/idea/.idea/libraries:javapoet-1.8.0",
        "//tools/idea/.idea/libraries:gson",
    ],
)

merged_properties(
    name = "data_binding_version_info",
    srcs = [
        "//tools/buildSrc/base:version.properties",
        "//tools/data-binding:databinding.properties",
    ],
    mappings = [
        "buildVersion:extensions",
        "buildVersion:compiler",
        "buildVersion:compilerCommon",
        "buildVersion:baseLibrary",
    ],
)

kotlin_library(
    name = "tools.compilerCommon",
    srcs = [
        "compilerCommon/src/main/grammar-gen",
        "compilerCommon/src/main/java",
        "compilerCommon/src/main/kotlin",
        "compilerCommon/src/main/xml-gen",
    ],
    pom = ":compilerCommon.pom",
    resource_strip_prefix = "tools/data-binding",
    resources = [":data_binding_version_info"],
    visibility = ["//visibility:public"],
    deps = [
        ":tools.baseLibrary",
        "//tools/base/annotations",
        "//tools/base/third_party:com.google.code.gson_gson",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:com.googlecode.juniversalchardet_juniversalchardet",
        "//tools/base/third_party:com.squareup_javapoet",
        "//tools/base/third_party:commons-io_commons-io",
        "//tools/base/third_party:org.antlr_antlr4",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
    ],
)

maven_pom(
    name = "compilerCommon.pom",
    artifact = "compilerCommon",
    group = "com.android.databinding",
    source = "//tools/buildSrc/base:build_version",
)

kotlin_test(
    name = "tools.compilerCommon_tests",
    srcs = [
        "compilerCommon/src/test/java",
        "compilerCommon/src/test/kotlin",
    ],
    jvm_flags = ["-Dtest.suite.jar=tests.jar"],
    test_class = "com.android.testutils.JarTestSuite",
    runtime_deps = ["//tools/base/testutils:tools.testutils"],
    deps = [
        ":tools.compilerCommon",
        "//tools/base/third_party:junit_junit",
    ],
)

iml_module(
    name = "studio.compiler",
    # do not sort: must match IML order
    srcs = [
        "compiler/src/main/java",
        "compiler/src/main/kotlin",
    ],
    iml_files = ["compiler/db-compiler.iml"],
    resources = ["compiler/src/main/resources"],
    tags = ["managed"],
    test_data = [
        "//prebuilts/studio/sdk:platforms/android-24",
        "//prebuilts/studio/sdk:platform-tools",
    ],
    test_srcs = ["compiler/src/test/java"],
    visibility = ["//visibility:public"],
    exports = ["//tools/data-binding:studio.baseLibrary"],
    # do not sort: must match IML order
    deps = [
        "//tools/data-binding:studio.baseLibrary[module]",
        "//tools/base/annotations:studio.android-annotations[module]",
        "//tools/data-binding:studio.compilerCommon[module]",
        "//tools/idea/.idea/libraries:antlr4-runtime-4.5.3",
        "//tools/idea/.idea/libraries:commons-io-2.4",
        "//tools/idea/.idea/libraries:juniversalchardet-1.0.3",
        "//tools/idea/.idea/libraries:commons-lang",
        "//tools/idea/.idea/libraries:Guava",
        "//tools/idea/.idea/libraries:JUnit4[test]",
        "//tools/idea/.idea/libraries:KotlinJavaRuntime",
    ],
)

# TODO: Use the right version of kotlin-compiler.
kotlin_library(
    name = "tools.compiler",
    srcs = [
        "compiler/src/main/java",
        "compiler/src/main/kotlin",
    ],
    pom = ":compiler.pom",
    resources = glob(["compiler/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        ":tools.baseLibrary",
        ":tools.compilerCommon",
        "//tools/base/annotations",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:commons-io_commons-io",
        "//tools/base/third_party:org.antlr_antlr4",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
    ],
)

maven_pom(
    name = "compiler.pom",
    artifact = "compiler",
    group = "com.android.databinding",
    source = "//tools/buildSrc/base:build_version",
)

maven_repo(
    name = "external_deps",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/core/runtime/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/common/1.0.3:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/compiler/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/extensions/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.0.3:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/cardview-v7/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.1.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/1.3.9:jar",
    ],
)

gradle_build(
    name = "runtimeLibraries",
    build_file = "extensions/build.gradle",
    data = [
        "//tools/base/build-system:gradle-distrib",
        "//prebuilts/studio/sdk:platforms/latest",
        "//prebuilts/studio/sdk:support_latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//prebuilts/studio/sdk:build-tools/latest",
        "//tools/buildSrc/base:version.properties",
        "//tools/data-binding:databinding.properties",
    ] + glob(
        ["extensions/**"],
        exclude = [
            "extensions/.gradle/**",
            "extensions/build/**",
            "extensions/local.properties",
            "extensions/**/build",
            "extensions/gradle/**",
            "extensions/gradlew",
            "extensions/gradlew.bat",
        ],
    ),
    gradle_version = "4.4-20171031235950+0000",
    output_file = "data_binding_runtime_repo.zip",
    output_file_source = "local_repo_zip/dataBindingRuntimeRepo.zip",
    repos = [
        "//tools/base/bazel:offline_repo_repo.zip",
        ":external_deps_repo.zip",
    ],
    tasks = ["createArchive"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "integration-test-projects",
    srcs = glob(
        ["integration-tests/**"],
        exclude = [
            "**/build/**",
            "**/.gradle/**",
            "integration-tests/App With Spaces/**",
        ],
    ),
    visibility = ["//visibility:public"],
)
